# phoenix

./: phoenix.toml  rust-toolchain
.github/workflows/: build-mrpc.yml  build-phoenix.yml
benchmark/src/: main.rs
eval/echo-bench/: apple_banana_workload.lua  apple_banana_workload_small.lua  docker-compose-frontend.yml  docker-compose-server.yml  echo_services.toml  launch_phoenix.toml  move.sh  phoenix_config.toml  start_container.sh  start_phoenix.sh  stop_container.sh
eval/echo-services/: Dockerfile  docker-compose-services.yml  echo_services.toml  launch_phoenix.toml  move.sh  start_container.sh  start_service.sh  stop_container.sh
eval/hotel-bench/: analyze.py  collect.sh  docker-compose-frontend.yml  docker-compose-geo.yml  docker-compose-profile.yml  docker-compose-rate.yml  docker-compose-search.yml  hotel_services.toml  launch_phoenix.toml  phoenix_config.toml  start_container.sh  start_phoenix.sh  start_service.sh  stop_container.sh  stop_service.sh
eval/hotel-services/: Dockerfile  config.json  config.toml  docker-compose-services.yml  hotel_services.toml  launch_phoenix.toml  move.sh  phoenix.toml  start_containers.sh  start_phoenix.sh  start_service.sh  stop_containers.sh
experimental/mrpc/: Cargo.toml  Makefile.toml
experimental/mrpc/examples/hotel_microservices/: Cargo.toml  rust-toolchain
experimental/mrpc/examples/hotel_microservices/src/: config.rs
experimental/mrpc/examples/hotel_microservices/src/frontend/: main.rs  server.rs
experimental/mrpc/examples/hotel_microservices/src/geo/: main.rs
experimental/mrpc/examples/hotel_microservices/src/profile/: main.rs
experimental/mrpc/examples/hotel_microservices/src/rate/: main.rs
experimental/mrpc/examples/hotel_microservices/src/search/: main.rs  server.rs
experimental/mrpc/examples/rpc_echo/: Cargo.toml
experimental/mrpc/examples/rpc_echo/src/: client2.rs  frontend.rs  server.rs
experimental/mrpc/plugin/mrpc/src/: engine.rs
experimental/mrpc/plugin/tcp_rpc_adapter/src/: engine.rs
experimental/mrpc/src/: rref.rs
experimental/mrpc/src/stub/: client.rs
