[package]
name = "hotel_microservices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
mrpc-build.workspace = true

[dependencies]
mrpc.workspace = true
prost = { workspace = true, features = ["mrpc-frontend"] }

structopt.workspace = true
futures.workspace = true
smol.workspace = true
minstant.workspace = true
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow = "1.0.58"
mongodb = "2.3.0"
kdtree = "0.6.0" 
geo = "0.23.0"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
memcache = "0.16.0"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
url = "2.3.1"
async-ctrlc = "1.2.0"
thiserror = "1.0.31"
csv = "1.1.6"

[[bin]]
name = "hotel_reserv_geo"
path = "src/geo/main.rs"

[[bin]]
name = "hotel_reserv_rate"
path = "src/rate/main.rs"

[[bin]]
name = "hotel_reserv_search"
path = "src/search/main.rs"

[[bin]]
name = "hotel_reserv_profile"
path = "src/profile/main.rs"

[[bin]]
name = "hotel_reserv_frontend"
path = "src/frontend/main.rs"

[[bin]]
name = "hotel_lat_bench_server"
path = "src/latency_bench/server.rs"

[[bin]]
name = "hotel_lat_bench_client"
path = "src/latency_bench/client.rs"